# evolutionary-line-follower

./: CMakeLists.txt  README.md  package.xml
resource/: multi_robot.ttt  single_robot.ttt
src/: ag.cpp  consts_test.cpp  image_processing.cpp  main.cpp  reset_robot.cpp  reset_robots.cpp  robot_control.cpp  show_lines.cpp  talker.cpp
src/headers/: ag.h  globals.h  image_processing.h  robot_control.h
